blur fix on firefox browsres

--- a/common.css
+++ b/common.css
@@ -26,6 +26,7 @@
     height: 60px;
     background-color: var(--primary-color);
     position: fixed;
+    -webkit-backdrop-filter: blur(8px);
     backdrop-filter: blur(4px);
     margin: 5px;
     border-radius: 8px;
@@ -196,6 +197,7 @@ footer{
     padding: 10px;
     border-radius: 8px 8px 0 0;
     background-color: var(--transparent-primary);
+    -webkit-backdrop-filter: blur(8px);
     backdrop-filter: blur(8px);
     justify-content: center;
     align-items: center;
