--- a/cytoid.css
+++ b/cytoid.css
@@ -115,6 +115,7 @@ table td {
     width: 100%;
     padding: 10px 0;
     background-color: var(--transparent-primary);
+    -webkit-backdrop-filter: blur(8px);
     backdrop-filter: blur(8px);
     border-radius: 0 8px 8px 0;
 }
@@ -166,7 +167,7 @@ table td {
     }
     .notes-demos img{
         width: 100%;
-        height: 20%;
+        height: fit-content;
         border-radius: 8px 8px 0 0;
     }
     .demos-details{
